# git-digest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  repos.yaml.example
.cursor/: mcp.json
src/git_updates/: __init__.py  cli.py  config.py  fetcher.py  ollama_client.py  state.py  summary.py
src/git_updates/mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_config.py  test_state.py
